<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5"
    android:orientation="vertical"
    android:background="@drawable/draw2">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#b3a5d5"
        android:id="@+id/toolbar"
        android:layout_marginTop="0dp"
        >

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/universitylogo"
                android:layout_marginLeft="-20dp"

                ></ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:src="@drawable/facultylogo"

                ></ImageView>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compliants"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_200"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/name"
                android:inputType="text"
                android:background="@drawable/edittextback"
                android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittextback"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/NID"
                android:drawableLeft="@drawable/baseline_person_24"
                android:background="@drawable/edittextback"
                android:drawablePadding="8dp"
                android:hint="@string/National"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/complaint"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittextback"
                android:hint="@string/complaint"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_200"
        app:cornerRadius = "20dp"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#b3a5d5"
        android:id="@+id/toolbar2"
        android:layout_marginTop="50dp"
        >
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@drawable/home"
                android:layout_marginLeft="-20dp"
                android:clickable="true"
                android:foreground="@drawable/effect"
                android:id="@+id/home"
                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/user"
                android:layout_marginBottom="-1dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@+id/person"
                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/mailphone"
                android:layout_marginBottom="-5dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@id/contact"
                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView

                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/baseline_translate_24"
                android:layout_marginBottom="-3dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@+id/translate"

                ></ImageView>
            <Spinner
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:id="@+id/spinner1"
                android:layout_height="90dp"
                >

            </Spinner>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</LinearLayout>