<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity17"
    android:orientation="vertical"
    >



    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#b3a5d5"
        android:id="@+id/toolbar"
        android:layout_marginTop="0dp"
        >

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/universitylogo"
                android:layout_marginLeft="-20dp"

                ></ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:src="@drawable/facultylogo"

                ></ImageView>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectdepartment"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:id="@+id/text"
        >
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/draw1"
        >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="20"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/mainGrid"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card1"
                        app:cardBackgroundColor="@color/white"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        android:foreground="@drawable/effect"
                        android:clickable="true"

                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/math"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            >
                        </TextView>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card2"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        android:foreground="@drawable/effect"
                        android:clickable="true"

                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/physics"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            >
                        </TextView>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card3"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/geology"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black"


                            >
                        </TextView>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card4"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/zoology"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            >
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card5"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/chemistry"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            >
                        </TextView>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card6"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/botany"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black"

                            >
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        android:id="@+id/card7"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/biochemistry"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"

                            >
                        </TextView>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card8"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/entomology"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"

                            >
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card9"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"

                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/microbolgy"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"

                            >
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:foreground="@drawable/effect"
                        android:clickable="true"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp"
                        android:layout_marginLeft="30dp"
                        android:layout_margin="10dp"
                        android:id="@+id/card10"
                        app:cardUseCompatPadding="true"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"

                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/geophysics"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center"

                            >
                        </TextView>

                    </androidx.cardview.widget.CardView>




                </GridLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#b3a5d5"
        android:id="@+id/toolbar2"
        android:layout_marginTop="-53dp"
        >
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@drawable/home"
                android:layout_marginLeft="-20dp"
                android:clickable="true"
                android:foreground="@drawable/effect"
                android:id="@+id/home"
                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/user"
                android:layout_marginBottom="-1dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@+id/person"
                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/mailphone"
                android:layout_marginBottom="-5dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@+id/contact"

                ></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            >
            <ImageView

                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/baseline_translate_24"
                android:layout_marginBottom="-3dp"
                android:foreground="@drawable/effect"
                android:clickable="true"
                android:id="@+id/translate"

                ></ImageView>
            <Spinner
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:id="@+id/spinner1"
                android:layout_height="90dp"
                >

            </Spinner>
        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>








</LinearLayout>